// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paywall /> should not render the default upgrade CTA if a custom upgrade CTA is passed 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
            <div
              class="upgradeButton"
            >
              <button>
                Upgrade me!
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render a custom upgrade CTA 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
            <div
              class="upgradeButton"
            >
              <button>
                Upgrade me!
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render a page header with custom header element 1`] = `
<div
  class="full-width pageWrapper"
>
  <div>
    Custom page header
  </div>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render a page header with string header 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Page header
    </h1>
  </div>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render a paywall theme with badge for Advanced paywall type 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg advanced"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render a paywall theme with badge for Basic paywall type 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg basic"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render a paywall theme with badge for Default paywall type 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render a paywall theme with badge for Enterprise paywall type 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg enterprise"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render a paywall theme with badge for Pro paywall type 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg pro"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render the default upgrade CTA 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
            <div
              class="upgradeButton"
            >
              <div
                class="d-flex align-items-center upgradeLink"
              >
                <a
                  to="[object Object]"
                >
                  <button
                    aria-disabled="false"
                    class="wrapper fill primary medium"
                    type="button"
                  >
                    <span
                      class="wrapper"
                    >
                      Upgrade to Foo
                      <i
                        class="material-icons icon isRight medium"
                      >
                        bolt
                      </i>
                    </span>
                  </button>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render with a legacy badge 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                <i
                  class="material-icons mr-1"
                >
                  warning
                </i>
                Legacy plan
              </div>
              <i
                class="material-icons upgradeChevron"
              >
                chevron_right
              </i>
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render with a testimonial 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
            <div
              class="testimonial"
            >
              <p
                class="testimonialText"
              >
                Gorgias best !
              </p>
              <div
                class="d-flex align-items-center author"
              >
                <img
                  alt="avatar"
                  class="mr-3 avatar"
                  src="test-file-stub"
                />
                <div>
                  <p
                    class="authorName mb-1"
                  >
                    <strong>
                      John Doe
                    </strong>
                  </p>
                  <p
                    class="authorDetails"
                  >
                    Customer Experience Manager
                     
                    at
                     
                    <a
                      href="https://acme.com/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Acme Inc.
                    </a>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render with an add-on update type 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Add-on
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render with filter shadow 1`] = `
<div
  class="filterShadow"
>
  <img
    alt="Feature preview"
    class="img-fluid"
    src="/static/private/img/paywalls/screens/paywall.png"
  />
</div>
`;

exports[`<Paywall /> should render with minimal props 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render with modal 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center mx-0 row"
      >
        <svg
          class="svg default"
          height="auto"
          viewBox="0 0 824 900"
          width="824"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
          />
        </svg>
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
        >
          <div
            class=""
          >
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <div
                class="badge"
              >
                Foo Plan
              </div>
            </div>
            <h1
              class="contentTitle"
            >
              Feature
            </h1>
            <div
              class="description"
            >
              <p>
                Feature description
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
    <div>
      Modal content
    </div>
  </div>
</div>
`;
